example/secondfile/objects/Wireline_Promo_Meta_Data__c.object
<CustomObject>
    <description>Meta data object for Wireline Promotion engine</description>
    <fields>
        <fullName>Before_Apply_Get_Price__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this if the field comes before the Apply and get price in the buyflow</description>
        <inlineHelpText>Check this if the field comes before the Apply and get price in the buyflow</inlineHelpText>
        <label>Before Apply Get Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Required_Section_For_Bulk__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required Section For Bulk Promotions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>To_Be_Counted_as_One__c</fullName>
        <defaultValue>false</defaultValue>
        <label>To Be Counted as One</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WP_Block_Promotion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WP Block Promotion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WP_Configurator_Name__c</fullName>
        <description>Name/Label of the field to be included</description>
        <inlineHelpText>Name/Label of the field to be included</inlineHelpText>
        <label>WP Configurator Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WP_Field_API_Name__c</fullName>
        <description>New field API Name</description>
        <inlineHelpText>New field API Name</inlineHelpText>
        <label>WP Field API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WP_Field_Name__c</fullName>
        <description>Represents the Field name to be displayed in Business user page</description>
        <inlineHelpText>Represents the Field name to be displayed in Business user page</inlineHelpText>
        <label>WP Field Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WP_Field_Value__c</fullName>
        <description>Specifies the possible field values</description>
        <inlineHelpText>Specifies the possible field values</inlineHelpText>
        <label>WP Field Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WP_Object_API_Name__c</fullName>
        <description>Specifies the Object Name to which the field belongs</description>
        <inlineHelpText>Specifies the Object Name to which the field belongs</inlineHelpText>
        <label>WP Object API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WP_Promo_Type__c</fullName>
        <description>Specifies the Promotion Types for which the field is applicable to</description>
        <inlineHelpText>Specifies the Promotion Types for which the field is applicable to</inlineHelpText>
        <label>WP Promo Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rate Card Map</fullName>
                </value>
                <value>
                    <fullName>SP Tier-Term</fullName>
                </value>
                <value>
                    <fullName>Port</fullName>
                </value>
                <value>
                    <fullName>Access</fullName>
                </value>
                <value>
                    <fullName>Feature</fullName>
                </value>
                <value>
                    <fullName>One-Time Charge</fullName>
                </value>
                <value>
                    <fullName>SP</fullName>
                </value>
                <value>
                    <fullName>Order</fullName>
                </value>
                <value>
                    <fullName>Deal Reg</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WP_Requires_Input__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, this field will require user input</description>
        <inlineHelpText>When checked, this field will require user input</inlineHelpText>
        <label>WP Requires Input?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WP_Section_Field_Sequence__c</fullName>
        <label>WP Section Field Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WP_Section_Name__c</fullName>
        <description>Specifies the section to which the field belongs</description>
        <inlineHelpText>Specifies the section to which the field belongs</inlineHelpText>
        <label>WP Section Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WP_Section_Order__c</fullName>
        <description>Specifies the order in which the sections will be displayed in the Wireline Promotion page</description>
        <inlineHelpText>Specifies the order in which the sections will be displayed in the Wireline Promotion page</inlineHelpText>
        <label>WP Section Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Wireline Promo Meta Data</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>WP_Configurator_Name__c</columns>
        <columns>WP_Field_API_Name__c</columns>
        <columns>WP_Section_Order__c</columns>
        <columns>WP_Field_Name__c</columns>
        <columns>WP_Field_Value__c</columns>
        <columns>WP_Object_API_Name__c</columns>
        <columns>WP_Promo_Type__c</columns>
        <columns>WP_Requires_Input__c</columns>
        <columns>WP_Section_Name__c</columns>
        <columns>Before_Apply_Get_Price__c</columns>
        <columns>To_Be_Counted_as_One__c</columns>
        <columns>WP_Block_Promotion__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>WP-{0000}</displayFormat>
        <label>Wireline Promo Meta Data Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Wireline Promo Meta Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>WP_Field_value_is_required</fullName>
        <active>true</active>
        <description>WP Field Value is required when &quot;WP Requires Input?&quot; is set to false</description>
        <errorConditionFormula>AND(ISBLANK(WP_Field_Value__c),WP_Requires_Input__c == false)</errorConditionFormula>
        <errorDisplayField>WP_Field_Value__c</errorDisplayField>
        <errorMessage>WP Field Value is required when &quot;WP Requires Input?&quot; is set to false.</errorMessage>
    </validationRules>
</CustomObject>